# image-processing-challenge

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml  requirements.txt  setup.py
cpp/: threshold.cpp  threshold.hpp
python/: dicom_import.py  process_and_export.py  process_and_export_test.py  threshold.pyx
tests/: threshold_test.cpp
